--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.1",
+    "wouter": "^3.3.5",
     "zod": "^3.23.8",
     "zustand": "^5.0.1"
   },
